fixes email field size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -473,7 +473,7 @@ footer p {
   }
 
   #newsletter form input[type="email"] {
-    width: 100%;
+    width: 97%;
     margin-bottom: 5px;
   }
 }
